line width for tex file

--- a/tmux.conf
+++ b/tmux.conf
@@ -18,7 +18,7 @@ bind-key C-a last-window
 #unbind %
 bind | split-window -h
 bind - split-window -v
-#bind c new-window -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
 # Automatically set window title
 setw -g automatic-rename
