open new pane at the current path

--- a/tmux.conf
+++ b/tmux.conf
@@ -16,8 +16,8 @@ bind-key C-l last-pane
 bind-key C-a last-window
 
 #unbind %
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
 # Automatically set window title
