--- a/tmux.conf
+++ b/tmux.conf
@@ -52,3 +52,6 @@ bind-key -t vi-copy 'y' copy-selection
 # Ctrl-Up/Down cyles thru panes (no prefix)
 bind-key -n "C-k" select-pane -t :.-
 bind-key -n "C-j" select-pane -t :.+
+
+set-option -g default-command "tmux rename-window tab; reattach-to-user-namespace -l /bin/bash"
+
