--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,4 @@
-set-option -g prefix C-a
+#set-option -g prefix C-a
 set -g default-terminal "screen-256color"
 
 # Set status bar
@@ -13,12 +13,15 @@ set-window-option -g window-status-current-bg red
 set -g status-right '#[fg=yellow]#(uptime | cut -d "," -f 2-)'
 
 bind-key C-l last-pane
-bind-key C-a last-window
+bind-key C-b last-window
 
 #unbind %
 bind | split-window -h -c "#{pane_current_path}"
+bind \ split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
+bind-key v split-window -h
+bind-key s split-window -v
 
 # Automatically set window title
 setw -g automatic-rename
@@ -55,3 +58,30 @@ bind-key -n "C-j" select-pane -t :.+
 
 set-option -g default-command "tmux rename-window tab; reattach-to-user-namespace -l /bin/bash"
 
+# Use Alt-arrow keys without prefix key to switch panes
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+# Shift arrow to switch windows
+bind -n S-Left previous-window
+bind -n S-Right next-window
+
+# 0 is too far from ` ;)
+set -g base-index 1
+
+# reload config file (change file location to your the tmux.conf you want to use)
+bind r source-file ~/.tmux.conf
+
+# The modes {
+setw -g clock-mode-colour colour135
+setw -g mode-attr bold
+setw -g mode-fg colour196
+setw -g mode-bg colour238
+# }
+# The panes {
+set -g pane-border-bg colour235
+set -g pane-border-fg colour238
+set -g pane-active-border-bg colour236
+set -g pane-active-border-fg colour51
