--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,4 @@
-#set-option -g prefix C-a
+set-option -g prefix C-a
 set -g default-terminal "screen-256color"
 
 # Set status bar
@@ -13,7 +13,7 @@ set-window-option -g window-status-current-bg red
 set -g status-right '#[fg=yellow]#(uptime | cut -d "," -f 2-)'
 
 bind-key C-l last-pane
-bind-key C-b last-window
+bind-key C-a last-window
 
 #unbind %
 bind | split-window -h -c "#{pane_current_path}"
@@ -48,25 +48,25 @@ bind-key -t vi-copy 'y' copy-selection
 # scrolling with terminal scroll bar
 #set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
-# Ctrl-Left/Right cycles thru windows (no prefix)
-#bind-key -n F11  select-window -t :-
-#bind-key -n F12  select-window -t :+
-
 # Ctrl-Up/Down cyles thru panes (no prefix)
-bind-key -n "C-k" select-pane -t :.-
-bind-key -n "C-j" select-pane -t :.+
-
-set-option -g default-command "tmux rename-window tab; reattach-to-user-namespace -l /bin/bash"
+#bind-key -n "C-k" select-pane -t :.-
+#bind-key -n "C-j" select-pane -t :.+
 
 # Use Alt-arrow keys without prefix key to switch panes
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
+#bind -n M-Left select-pane -L
+#bind -n M-Right select-pane -R
+#bind -n M-Up select-pane -U
+#bind -n M-Down select-pane -D
 
-# Shift arrow to switch windows
-bind -n S-Left previous-window
-bind -n S-Right next-window
+# Ctrl-Left/Right cycles thru windows (no prefix)
+bind-key -n F11  select-window -t :-
+bind-key -n F12  select-window -t :+
+
+# Shift arrow to switch pane
+bind -n S-Left select-pane -L
+bind -n S-Right select-pane -R
+bind -n S-Up select-pane -U
+bind -n S-Down select-pane -D
 
 # 0 is too far from ` ;)
 set -g base-index 1
@@ -85,3 +85,6 @@ set -g pane-border-bg colour235
 set -g pane-border-fg colour238
 set -g pane-active-border-bg colour236
 set -g pane-active-border-fg colour51
+
+set-option -g default-command "tmux rename-window tab; reattach-to-user-namespace -l /bin/bash"
+
