--- a/tmux.conf
+++ b/tmux.conf
@@ -49,6 +49,7 @@ bind-key -t vi-copy 'y' copy-selection
 #set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 # Ctrl-Up/Down cyles thru panes (no prefix)
+bind-key -n "C-u" select-pane -t :.+
 #bind-key -n "C-k" select-pane -t :.-
 #bind-key -n "C-j" select-pane -t :.+
 
