--- a/tmux.conf
+++ b/tmux.conf
@@ -50,42 +50,45 @@ bind-key -t vi-copy 'y' copy-selection
 
 # Ctrl-Up/Down cyles thru panes (no prefix)
 bind-key -n "C-u" select-pane -t :.+
-#bind-key -n "C-k" select-pane -t :.-
-#bind-key -n "C-j" select-pane -t :.+
-
-# Use Alt-arrow keys without prefix key to switch panes
-#bind -n M-Left select-pane -L
-#bind -n M-Right select-pane -R
-#bind -n M-Up select-pane -U
-#bind -n M-Down select-pane -D
+bind-key -n C-Tab next-window
 
 # Ctrl-Left/Right cycles thru windows (no prefix)
 bind-key -n F11  select-window -t :-
 bind-key -n F12  select-window -t :+
 
 # Shift arrow to switch pane
-bind -n S-Left select-pane -L
-bind -n S-Right select-pane -R
-bind -n S-Up select-pane -U
-bind -n S-Down select-pane -D
+bind -n S-Left select-window -t :-
+bind -n S-Right select-window -t :+
+bind -n S-Up select-pane -t :.+
+bind -n S-Down select-pane -t :.-
+# Use Alt-vim keys without prefix key to switch panes
+#bind -n M-h select-pane -L
+#bind -n M-j select-pane -D 
+#bind -n M-k select-pane -U
+#bind -n M-l select-pane -R
+# Use Alt-arrow keys without prefix key to switch panes
+#bind -n M-Left select-pane -L
+#bind -n M-Right select-pane -R
+#bind -n M-Up select-pane -U
+#bind -n M-Down select-pane -D
+
 
 # 0 is too far from ` ;)
 set -g base-index 1
 
 # reload config file (change file location to your the tmux.conf you want to use)
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf; #display "Reloaded!"
 
-# The modes {
-setw -g clock-mode-colour colour135
-setw -g mode-attr bold
-setw -g mode-fg colour196
-setw -g mode-bg colour238
-# }
-# The panes {
-set -g pane-border-bg colour235
-set -g pane-border-fg colour238
-set -g pane-active-border-bg colour236
-set -g pane-active-border-fg colour51
+## The modes {
+#setw -g clock-mode-colour colour135
+#setw -g mode-attr bold
+#setw -g mode-fg colour196
+#setw -g mode-bg colour238
+## }
+## The panes {
+#set -g pane-border-bg colour235
+#set -g pane-border-fg colour238
+#set -g pane-active-border-bg colour236
+#set -g pane-active-border-fg colour51
 
-set-option -g default-command "tmux rename-window tab; reattach-to-user-namespace -l /bin/bash"
 
