--- a/tmux.conf
+++ b/tmux.conf
@@ -92,3 +92,4 @@ bind r source-file ~/.tmux.conf; #display "Reloaded!"
 #set -g pane-active-border-fg colour51
 
 
+set -g default-command "tmux rename-window bash; reattach-to-user-namespace -l bash"
